tests/paczka1/small_fuzzy/84744966.err
Error in line 3: A465 A465 70,0
Error in line 2: ztR A86 66,8
